# inverse-kinematic-solver

./: .gitignore  CMakeLists.txt  ToDo.md  build.sh
core/inc/: BlockSizePlanner.hpp  Joint.hpp  LinearAlgebra.hpp  Link.hpp  Manipulator.hpp  MemoryPool.hpp  SystemInfo.hpp
core/src/: Joint.cpp  Link.cpp  SystemInfo.cpp  main.cpp
docker/: Dockerfile
docs/: benchmarks.md
